# round-table-workspace

./: .env.debate.example  .env.room.example  .gitignore  AGENTS.full-20260411-142320.md  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  DECISIONS-LOCKED.md  DEVELOPMENT-BOARD-PRIORITY-PROGRESS-2026-04-16-CORRECTED.md  FULL-FOLDER-READTHROUGH-AND-MAINLINE-AUDIT-2026-04-16.md  GITHUB_SETUP_RESULT.md  HANDOFF.md  LAUNCH.md  LICENSE  NEXT-STEPS.md  PROJECT-STRUCTURE.md  README.md  ROOM-SELECTION-LIVE-BUNDLE-2026-04-17.json  ROUND-TABLE-TAKEOVER-2026-04-12.md  ROUND-TABLE-TAKEOVER-2026-04-17.md  SESSION-10-ROOM-UPGRADE-CONTRACT-CHECKLIST-REPORT.md  SESSION-18-CHAT-COMPLETIONS-CLI-INTEGRATION-REPORT.md  SESSION-19-PAUSE-HANDOFF-REPORT.md  SESSION-2-COMPLETION-REPORT.md  SESSION-20-PROVIDER-CONFIG-PREFLIGHT-REPORT.md  SESSION-28-SELECTION-TO-LOCAL-RUNTIME-FIXTURE.json  SESSION-30-HOST-ASSISTED-LIVE-RERUN-REPORT-2026-04-17.md  SESSION-31-MULTI-TURN-COMMAND-FLOW-RERUN-REPORT-2026-04-18.md  SESSION-33-PHASE-7-AUTO-DISCOVERY-SCANNER-REPORT-2026-04-18.md  SESSION-35-PROVIDER-BACKED-COMMAND-FLOW-BRIDGE-REPORT-2026-04-18.md  SESSION-37-DEFAULT-PROVIDER-RUNTIME-REPORT-2026-04-18.md  SESSION-39-ROOM-RESUME-COMMAND-SURFACE-REPORT-2026-04-18.md  SESSION-40-CATALOG-BACKED-ROOM-RESUME-REPORT-2026-04-18.md  SESSION-43-ROOM-SESSION-CATALOG-SORTING-AND-LIMITS-REPORT-2026-04-19.md  SESSION-44-ROOM-SESSION-CATALOG-DELETE-REPORT-2026-04-19.md  SESSION-45-ROOM-SESSION-ARCHIVE-FIRST-PURGE-REPORT-2026-04-19.md  SESSION-46-ROOM-SESSION-CATALOG-REPAIR-REPORT-2026-04-19.md  SESSION-5-COMPLETION-REPORT.md  (+26 more)
(+337 files in other folders)
